# event-management-system

./: .dockerignore  .env.docker  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  pyproject.toml
apps/auth/: apps.py  serializers.py  urls.py  views.py
apps/common/utils/: permissions.py  responses.py
apps/config/: index.py
apps/event_sessions/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
apps/event_sessions/migrations/: 0001_initial.py
apps/events/: filters.py  models.py  serializers.py  urls.py  views.py
apps/events/migrations/: 0001_initial.py
apps/registrations/: filters.py  models.py  serializers.py  urls.py  views.py
apps/registrations/migrations/: 0001_initial.py
apps/speakers/: models.py  serializers.py  urls.py  views.py
apps/speakers/migrations/: 0001_initial.py  0002_alter_speaker_creator.py
apps/tracks/: filters.py  models.py  serializers.py  urls.py  views.py
apps/tracks/migrations/: 0001_initial.py
apps/users/: filters.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_auto_20260420_2007.py
apps/venues/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
eventmanagementsystem/: asgi.py  settings.py  urls.py  wsgi.py
